fixing strong (bold) text so it adjusts for dark mode

--- a/less/index.less
+++ b/less/index.less
@@ -239,6 +239,9 @@ strong {
         background: #222;
         color: #ccc;
     }
+    .homepage__bottom-copy strong {
+        color: #ccc !important;
+    }
 
     /*Want to donate code section*/
     .homepage__bottom-copy:nth-child(2n) {
